FIX: Small fix for overflow

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -287,6 +287,7 @@ a {
           text-overflow: ellipsis;
           overflow: hidden;
           white-space: nowrap;
+          max-width: 0;
           img {
             height: 20px;
           }
